--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         }
 
         .button-row button {
-            width: 48%; /* Ajustar el ancho de los botones en la fila */
+            width: 38%; /* Ajustar el ancho de los botones en la fila */
         }
 
         #map {
-            height: 300px;
+            height: 200px;
             width: 100%;
             margin-top: 20px;
         }
@@ -90,9 +90,11 @@
         <div>
             <label for="distanciaObjetivo">Distancia Objetivo (Km):</label>
             <input type="number" id="distanciaObjetivo" min="0" step="0.01">
+        </div>
         <div>
             <label for="tiempoObjetivoHoras">Tiempo Objetivo (Hrs):</label>
             <input type="number" id="tiempoObjetivoHoras" min="0" step="1">
+        </div>
         <div>
             <label for="tiempoObjetivoMinutos">Tiempo Objetivo (Min):</label>
             <input type="number" id="tiempoObjetivoMinutos" min="0" step="1">
