--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container">
         <img src="C:/Users/diego.valdes/OneDrive - office365tl/VISUAL STUDIO CODE/imagenes/PORTADA.jpg" alt="Portada de la app">
         <h1 style="font-size: 1.5em;">Alcanza Tu Ritmo Ideal</h1>
-        <h1 style="font-size: 1.5em;">By Diego Valdésh1>
+        <h1 style="font-size: 1.5em;">By Diego Valdés</h1>
         <div>
             <label for="distanciaObjetivo">Distancia Objetivo (Km):</label>
             <input type="number" id="distanciaObjetivo" min="0" step="0.01">
