--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
       max-width: 400px;
     }
 
-    .container img {
-      max-width: 100%;
-      height: auto;
-      margin-bottom: 20px;
     }
 
     label {
@@ -40,6 +36,7 @@
     input[type="number"],
     input[type="text"] {
       width: calc(100% - 22px);
+      text-align: center;
       padding: 10px;
       margin-bottom: 20px;
       border: 1px solid #ccc;
@@ -74,7 +71,7 @@
     }
 
     .button-row button {
-      width: 48%;
+      width: 38%;
     }
 
     .time-inputs {
@@ -84,11 +81,11 @@
     }
 
     .time-inputs div {
-      width: 48%;
+      width: 38%;
     }
 
     #map {
-      height: 200px;
+      height: 150px;
       width: 100%;
       margin-top: 20px;
     }
