--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Alcanza Tu Ritmo Ideal</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Verdana, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
