--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 <body>
   <div class="container">
     <h1 style="font-size: 1.5em;">Alcanza Tu Ritmo Ideal</h1>
-    <h2 style="font-size: 1em;">By Diego Valdés</h2>
+    <h2 style="font-size: 1em;">By Diego Valdés App</h2>
+    <h3 style="font-size: 1em;">Versión de prueba 1.0</h3>
 
     <div>
       <label for="nombreCarrera">Nombre de la Carrera:</label>
